<resources>
    <string name="app_name">Strider</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_track">Track</string>
    <string name="title_goal">Goal</string>
    <string name="title_account">Account</string>

    <!-- Errors -->
    <string name="err_spotify_disconnected">"Spotify is not Connected. Use one of the 'connect' buttons"</string>
    <string name="err_generic_toast">An error has occurred. Check the logs to know more.</string>

    <!-- Connect Auth -->
    <string name="connect">Connect</string>
    <string name="authorize">Connect and Authorize</string>
    <string name="connecting">Connecting</string>
    <string name="connected">Connected</string>
    <string name="disconnect">Disconnect</string>

    <!-- Controls -->
    <string name="on_demand_feedback">Can play on demand? %1$b</string>
    <string name="is_in_collection_feedback">Is in the user collection? %1$s</string>
    <string name="command_feedback">"'%1$s' command successful!"</string>
    <string name="command_response">"'%1$s' command response"</string>
    <string name="connect_switch_to_local">Switch to Local Playback</string>
    <string name="play_podcast_button_label">Play podcast</string>
    <string name="play_album_button_label">Play album</string>
    <string name="play_artist_button_label">Play artist</string>
    <string name="play_playlist_button_label">Play playlist</string>
    <string name="play_track_button_label">Play track</string>
    <string name="get_collection_state">Get Collection state</string>
    <string name="save_uri">Save to Collection</string>
    <string name="remove_uri">Remove from Collection</string>
    <string name="browse_content">Browse Content</string>
    <string name="subscribe_to_capabilities">Get Capabilities</string>
    <string name="subscribe_to_current_track">Subscribe to playerstate</string>
    <string name="subscribe_to_player_context">Subscribe to playercontext</string>
    <string name="title_player_context">Player Context</string>
    <string name="title_current_track">Current Track</string>
    <string name="title_image_size">Image size</string>
    <string name="title_image_scale_type">Scale type</string>

    <string-array name="journey_array">
        <item>Select journey</item>
        <item>Pig journey</item>
        <item>Viet Nam Flag Journey</item>
        <item>Dog Journey</item>
    </string-array>
    <string-array name="type_array">
        <item>WALK</item>
        <item>RUN</item>
        <item>CYCLE</item>
    </string-array>
    <string-array name="rating_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>