<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_marker"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_track"
        android:icon="@drawable/stop_circled"
        android:title="@string/title_track" />
    <item
        android:id="@+id/navigation_goal"
        android:icon="@drawable/goal"
        android:title="@string/title_goal" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account"
        android:title="@string/title_account" />

</menu>